--- a/index.html
+++ b/index.html
@@ -3,94 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Work 1</title>
-    <link rel="stylesheet" href="./main.css">
+    <title>HomeWork2</title>
 </head>
 <body>
-    
-    <div class="container">
-        <p>Assignmet 1</p>
-        <p>Provided Examples</p>
-
-        <p>Row 1</p>
-        <div class="wrapper">
-            <div class="red"></div>
-            <div class="blue"></div>
-        </div>
-
-        <p>Row 2</p>
-        <div class="wrapper">
-            <div class="empty"></div>
-            <div class="blue-row2"></div>
-        </div>
-
-        <!-- TODO: Insert div elements in the next 7 wrappers for your solution -->
-
-        <p>Student TODOs</p>
-        <p>Row 3</p>
-        <div class="wrapper">
-            <div class="red-row3"></div>
-            <div class="empty-row3"></div>
-            <div class="blue-row3"></div>
-        </div>
-
-        <p>Row 4</p>
-        <div class="wrapper">
-            <div class="red-row4"></div>
-            <div class="blue-row4"></div>
-        </div>
-
-        <p>Row 5</p>
-        <div class="wrapper">
-            <div class="wrapper-row5">
-                <div class="red-row5"></div>
-            </div>
-        </div>
-
-        <p>Row 6</p>
-        <div class="wrapper">
-            <div class="red-row6">
-                <div class="blue-row6"></div>
-            </div>
-        </div>
-
-        <p>Row 7</p>
-        <div class="wrapper">
-            <div class="red-row7"></div>
-            <div class="blue-row7">
-                <div class="blue-row7-1" ></div>
-                <div class="blue-row7-2" ></div>
-            </div>
-        </div>
-
-        <p>Row 8</p>
-        <div class="wrapper">
-            <div class="yello-row8">
-                <div class="yello-row yello-row8-1" ></div>
-                <div class="empty-row8 epty-row8-1"></div>
-                <div class="yello-row yello-row8-1" ></div>
-                <div class="empty-row8 epty-row8-1"></div>
-                <div class="yello-row yello-row8-1" ></div>
-                <div class="empty-row8 epty-row8-1"></div>
-                <div class="yello-row yello-row8-1" ></div>
-                <div class="empty-row8 epty-row8-1"></div>
-                <div class="yello-row yello-row8-1" ></div>
-            </div>
-        </div>
-
-        <p>Row 9</p>
-        <div class="wrapper">
-            <div class="yello-width yello-row9-1"></div>
-            <div class="empty-width epty-row9-1"></div>
-            <div class="yello-width yello-row9-1"></div>
-            <div class="empty-width epty-row9-1"></div>
-            <div class="yello-width yello-row9-1"></div>
-            <div class="empty-width epty-row9-1"></div>
-            <div class="yello-width yello-row9-1"></div>
-            <div class="empty-width epty-row9-1"></div>
-            <div class="yello-width yello-row9-1"></div>
-        </div>
-
-    </div>
+    <h1>Home Work 2</h1>
+    <script src="./index.js"></script>
 </body>
 </html>
