1-st and 2-nd tasks done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Home Work 6</title>
 </head>
 <body>
-    <h1>Home Work 6</h1>
+    <!-- Task 1 -->
+    <!-- <input type="button" id="hider" value="Push to Hide Text" />
+    <div id="text">Hide me</div> -->
+
+    <!-- Task 2 -->
+    <button id="alert">Button</button>
+
+
+
+    <script src="./index.js"></script>
 </body>
 </html>
