added font weight in extra task

--- a/extra.html
+++ b/extra.html
@@ -13,7 +13,7 @@
     <div class="menu-toggle" id="menu-toggle">
         <button class="drop" id="drop">▶</button>
         <button class="hide" id="hide" style="display: none;">▼</button>
-        <p>Сладости (нажми меня)!</p>
+        <p>Сладости (нажми стрелку)!</p>
     </div>
 
     <div class="menu" id="menu">
