--- a/extra.html
+++ b/extra.html
@@ -21,6 +21,9 @@
         <li>Пирожное</li>
         <li>Пончик</li>
         <li>Мёд</li>
+        <li>Пахлава</li>
+        <li>Альбени</li>
+        <li>Торт</li>
       </ul>
     </div>
 
